<resources>
    <string name="app_name">SqlCase6</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salary_card">Salary Card</string>
    <string name="basic_details">Basic Details</string>
    <string name="salary_details">Salary Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="age">Age</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="hra">HRA</string>
    <string name="ta">TA</string>
    <string name="ctc">CTC</string>
    <string name="save">Save</string>
</resources>