<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BasicDetailsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/basic_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#0B0A0A"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtbsname"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtbsmob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtbsname"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edtbsage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtbsmob" />

    <EditText
        android:id="@+id/edtbsmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtbsage" />

    <Button
        android:id="@+id/bsSave"
        android:layout_width="139dp"
        android:layout_height="49dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="80dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtbsmail" />

</androidx.constraintlayout.widget.ConstraintLayout>